@@ -1,5 +1,8 @@
 
-For 2.0.2
+For 2.0.3
+
+- Vectorize matchPattern() (result will be a list of BStringViews
+  objects).
 
 - Make alphabetFrequency works with BStringViews objects with
   "out of limits" views.
@@ -17,7 +20,7 @@ For 2.0.2
   and size, how well do they work on different inputs)".
 
 
-For 2.0.3
+For 2.0.4
 
 - "normalized" BStringViews objects: 'v' is "normalized" means
     (1) no "out of limits" views,
